# ClaudeOrchestratorMCP

./: .gitignore  .mcp-cli.json  .mcp.json  .mcp.json.example  AGENTS.md  AGENTS_PY_MIGRATION_SUMMARY.md  CHANGELOG.md  CHANGES_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  COORDINATION_INTEGRATION_EXAMPLE.md  CROSS_PROJECT_FIX.md  CURSOR_CLI_INTEGRATION_COMPLETE.md  CURSOR_CLI_PHASE2_COMPLETE.md  CURSOR_SETUP.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MCP_CONNECTION_FIX.md  MCP_CONNECTION_WORKAROUNDS.md  MCP_QUICK_START.md  MIGRATION_GUIDE_STATE_DB.md  MODEL_SELECTION.md  QUICK_REFERENCE.md  README.md  START_HERE.md  WORKSPACE_SETUP.md  check_connection.sh  check_counts.py  check_mcp_health.py  cleanup_leaked_agents.sh  demo_working_orchestrator.py  diagnose_mcp.py  get_token.sh  install_mcp.sh  install_toolkit.sh  progress_watchdog.sh  pyproject.toml  real_mcp_server.py  repair_registry.py  requirements.txt  (+38 more)
.agent-workspace/: .daemon_health
dashboard/: DESKTOP_APP.md  build-desktop.sh  package.json  start-dashboard.sh  stop-dashboard.sh
docs/: AGENT_COMPLETION_DETECTION.md  CURSOR_CLI_INTEGRATION.md  CURSOR_CLI_SUMMARY.md  CURSOR_CLI_USAGE.md  MCP_TOOLS.md  MIGRATION_COMPLETE.md  WORKSPACE_REGISTRY_FIX.md
examples/: demo.sh
orchestrator/: __init__.py  _dependency_guard.py  completion_notifier.py  context.py  context_accumulator.py  coordination.py  deployment.py  global_registry.py  handover.py  health_daemon.py  lifecycle.py  prompts.py  registry.py  review.py  state_db.py  state_db_backup.py  status.py  tasks.py  workspace.py
scripts/: README_MIGRATION.md  deploy.sh  manage_registry.py  migrate_to_sqlite.py  verify_migration.py
tests/: README.md  __init__.py  fixtures.py  run_state_db_tests.py  (+8 more)
(+1339 files in other folders)
